latest fix env